Update RecordParser to handle everything it needs to parse:
- AggregatedInput objects
    - w/ json and/or xml
- Strings from SME functions
    - iso xml
    - json in ParsedRecord format
    - json in Input format containing either json or xml content